Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.1
-
Windows 10, MSVC 2015
-
-
a40fcae40fdc4d7cd658c4b8ab38aad7572f2ecf
Description
Periodically, an assert will occur indicating that processQueue is in an unexpected state which is Idle. The assert specifically is:
Q_ASSERT_X(false, "processQueue", QByteArray("unexpected state: ").append(m_state));
This does not appear to happen on macOS at least, but only on Windows where it might be easier to reproduce.
Attachments
Issue Links
- is duplicated by
-
QTBUG-53767 modbus request timeout on windows
-
- Closed
-
-
QTBUG-73230 QModbusRtuSerialMaster Q_ASSERT_X "processQueue", "response timer active"
-
- Closed
-
For Gerrit Dashboard: QTBUG-73965 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
256482,5 | Rewrite RTU master state machine | 5.13 | qt/qtserialbus | Status: MERGED | +2 | 0 |