Rewrite RTU master state machine

Task-number: QTBUG-73965
Task-number: QTBUG-73230
Change-Id: I4e4b201b172d32802ce934f111631279dc7157e1
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>